login-form: scss - fix visibility for password error

--- a/src/sass/layout/_login.scss
+++ b/src/sass/layout/_login.scss
@@ -196,14 +196,11 @@
 
   margin-top: 4px;
   margin-bottom: 8px;
+  visibility: hidden;
 }
 
 .login-form__password-error--visible {
   visibility: visible;
-}
-
-.login-form__password-error--invisible {
-  visibility: hidden;
 }
 
 .auth-options {
